Settings UI: fix positioning of search icon on mobile screen size when the dropdown is expanded

--- a/_inc/client/settings/style.scss
+++ b/_inc/client/settings/style.scss
@@ -11,3 +11,9 @@
 		display: inherit;
 	}
 }
+
+@include breakpoint( "<480px" ) {
+	.dops-search.is-expanded-to-container {
+		height: 46px;
+	}
+}
